--- a/responsive.css
+++ b/responsive.css
@@ -114,7 +114,8 @@
   }
 
   .skill-content button,
-  .detail button {
+  .detail button,
+  .modal-close {
     border-radius: 50px;
   }
 
@@ -178,7 +179,7 @@
 @media screen and (min-width: 1024px) {
 
   a {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   i {
@@ -186,7 +187,7 @@
   }
   
   body{
-    font-size: 24px;
+    font-size: 20px;
   }
 
 
@@ -339,11 +340,11 @@
   .msg {
     position: absolute;
     width: 80%;
-    top: 40%;
+    top: 50%;
     left: 50%;
     right: 0;
     bottom: 0;
-    transform: translate(-50%, -40%);
+    transform: translate(-50%, -50%);
     z-index: 1;
   }
 
@@ -445,6 +446,7 @@
 
   .screenshots img:nth-child(2) {
     height: 300px;
+    margin: 0 auto;
   }
 
   /* Contact */
