--- a/style.css
+++ b/style.css
@@ -549,6 +549,7 @@ overflow: hidden;
 	width: 100%;
 	border: 1px solid #7f9f98;
 	border-radius: 8px;
+	margin-top: 32px;
 }
 
 .screenshots img:nth-child(2) {
