--- a/responsive.css
+++ b/responsive.css
@@ -382,8 +382,8 @@
 
   #profile img {
     width: 200px;
-    height: 300px;
-    border-radius: 8px;
+    height: 200px;
+    border-radius: 50%;
   }
 
    /* SKILLS */
